[package]
name = "chubi-perp"
version = "0.1.0"
description = "Chubi perpetual conviction markets — streaming funding-rate"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chubi_perp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
